# looker-mcp-server

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/looker_mcp_server/: __init__.py  __main__.py  client.py  config.py  identity.py  introspect.py  main.py  middleware.py  server.py
src/looker_mcp_server/oidc/: __init__.py  jwks.py  looker_introspection.py  middleware.py  prm.py  resource_server.py  www_authenticate.py
src/looker_mcp_server/tools/: __init__.py  _helpers.py  admin.py  audit.py  board.py  connection.py  content.py  credentials.py  explore.py  folder.py  git.py  health.py  identity.py  modeling.py  query.py  render.py  schema.py  user_attributes.py  workflows.py
tests/: test_admin_completion_tools.py  test_audit_tools.py  test_board_tools.py  test_client.py  test_config.py  test_connection_tools.py  test_credentials_tools.py  test_explore_tools.py  test_folder_tools.py  test_git_tools.py  test_health_endpoints.py  test_identity.py  test_identity_tools.py  test_introspect.py  test_looker_oauth_mode.py  test_modeling_tools.py  test_oidc.py  test_oidc_middleware.py  test_query_tools.py  test_render_tools.py  test_server_public_mode.py  test_user_attribute_tools.py  test_workflow_tools.py
