[project]
name = "looker-mcp-server"
version = "0.4.0"
description = "A Model Context Protocol (MCP) server for the Looker API with full tool coverage, OAuth pass-through, and user impersonation support."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ultrathink Solutions", email = "engineering@ultrathinksolutions.com" }]
keywords = ["mcp", "looker", "lookml", "bi", "model-context-protocol", "semantic-layer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
dependencies = [
    "fastmcp>=3.2.0,<4", # CVE-2026-32871 fix (SSRF in OpenAPI Provider)
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.0",
]

[project.scripts]
looker-mcp-server = "looker_mcp_server.main:cli"

[project.urls]
Homepage = "https://github.com/ultrathink-solutions/looker-mcp-server"
Repository = "https://github.com/ultrathink-solutions/looker-mcp-server"
Issues = "https://github.com/ultrathink-solutions/looker-mcp-server/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.9",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/looker_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["looker_mcp_server"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
